[project]
name = "MediaUtilities-v2"
description = "Custom nodes for loading and previewing media from URLs in ComfyUI."
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["requests>=2.28.2", "numpy>=1.24.0", "pillow>=9.4.0", "torch>=2.0.0", "torchaudio>=2.0.0", "opencv-python>=4.7.0"]

[project.urls]
Repository = "https://github.com/ThanaritKanjanametawatAU/ComfyUI-MediaUtilities-v2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "whitemoney293"
DisplayName = "ComfyUI-MediaUtilities-v2"
Icon = ""
